--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>Data Analyst | SQL • Excel • Power BI • Tableau | Turning every aspect of data into actionable insights</p>
 
         <div class="social-links">
-            <a href="https://www.linkedin.com/in/ahmed-abdelnasser-8b26ab29b" target="_blank" rel="noopener" title="LinkedIn">
+            <a href="https://www.linkedin.com/in/ahmed-abdelnasser-%E2%80%8E-8b26ab29b" target="_blank" rel="noopener" title="LinkedIn">
                 <i class="fab fa-linkedin"></i>
             </a>
             <a href="https://github.com/everyaspekt" target="_blank" rel="noopener" title="GitHub">
