--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Favicons (place these files in the REPO ROOT) -->
     <link rel="icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" href="assets/images/LOGO.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <!-- Google Fonts for Elegant Typography -->
