--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                 <i class="fas fa-envelope"></i>
             </a>
 
-            <!-- Optional: add your CV later (place file at assets/Ahmed_Abdelnasser_CV.pdf) -->
             <a href="assets/Ahmed_Abdelnasser_CV.pdf" download title="Download CV">
                 <i class="fas fa-file-arrow-down"></i>
             </a>
@@ -68,8 +67,7 @@
         <h2>About Me</h2>
         <div class="about-content">
 
-            <!-- Profile photo path: put your image at assets/images/profile.jpg -->
-            <img src="assets/images/profile.jpg" alt="Ahmed Abdelnasser" class="profile-photo" />
+            <img src="assets/images/Profile.jpg" alt="Ahmed Abdelnasser" class="profile-photo" />
 
             <div class="about-text">
                 <p>
@@ -204,7 +202,6 @@
         <form action="https://formsubmit.co/ahmedabdelnasser.everyaspekt@gmail.com" method="POST" class="contact-form">
             <p>Interested in collaborating or have questions about my work? I'd love to hear from you!</p>
 
-            <!-- Recommended FormSubmit settings -->
             <input type="hidden" name="_subject" value="New message from your portfolio site" />
             <input type="hidden" name="_captcha" value="false" />
 
@@ -240,7 +237,6 @@
     </div>
 </footer>
 
-<!-- Optional JS (only keep if you actually have this file) -->
 <script src="assets/js/main.js"></script>
 
 </body>
