--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 <!-- FOOTER -->
 <footer>
     <div class="container">
-        <p>&copy; 2026 Ahmed Abdelnasser. All rights reserved.</p>
+        <p>&copy; 2026 EveryAspekt. All rights reserved.</p>
     </div>
 </footer>
 
