--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <header>
     <div class="container">
         <h1>Ahmed Abdelnasser</h1>
-        <p>Data Analyst | SQL • Excel • Power BI • Tableau | Turning every aspect of data into actionable insights</p>
+        <p>Data Analyst | SQL • Python • Excel • Power BI • Tableau | Turning every aspect of data into actionable insights</p>
 
         <div class="social-links">
             <a href="https://www.linkedin.com/in/ahmed-abdelnasser-%E2%80%8E-8b26ab29b" target="_blank" rel="noopener" title="LinkedIn">
@@ -74,7 +74,7 @@
                     I’m a data analyst focused on transforming raw data into clear, actionable insights that support data-driven decision-making.
                 </p>
                 <p>
-                    I work with SQL, Excel, Tableau, and Power BI to clean, analyze, and visualize real-world datasets. My projects emphasize practical business questions, structured analytical workflows, and storytelling through dashboards and reports.
+                    I work with SQL, Python, Excel, Power BI, and Tableau to clean, analyze, and visualize real-world datasets. My projects emphasize practical business questions, structured analytical workflows, and storytelling through dashboards and reports.
                 </p>
             </div>
         </div>
