--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <title>Ahmed Abdelnasser | Data Analyst Portfolio</title>
 
-    <!-- Favicons (place these files in the REPO ROOT) -->
     <link rel="icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="assets/images/LOGO.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
@@ -14,7 +13,7 @@
     <!-- Google Fonts for Elegant Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
